--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "telco-customer-churn"
 version = "0.1.0"
-description = "Add your description here"
+description = "Desarrollo de un proyecto de ciencia de datos end to end"
 readme = "README.md"
 requires-python = ">=3.12.9"
 dependencies = [
