--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "matplotlib>=3.10.0",
     "pandas>=2.2.3",
     "pyarrow>=19.0.1",
+    "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
 ]
